update index.html, style.css and add assets folder

--- a/index.html
+++ b/index.html
@@ -3,33 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>DOEAN MAURE</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
-<body class="d-flex h-100 text-center">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="mb-auto">
-            <div>
-            <h3 class="float-md-start mb-0">Logo Here</h3>
-            <nav class="nav nav-masthead justify-content-center float-md-end">
-                <a class="nav-link fw-bold text-dark" href="#">About</a>
-                <a class="nav-link fw-bold text-dark" href="#">Projects</a>
-                <a class="nav-link fw-bold text-dark" href="#">Contact</a>       
-            </nav>
+<body class="d-flex flex-column h-100">
+    <header class="py-2 mb-4 border-bottom">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <a href="#" class="navbar-brand"><img src="./assets/images/doean.png" class="logo" alt=""></a>
+                <button class="navbar-toggler mx-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse mx-3" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+                        <li class="nav-item dropdown"><a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+                            <ul class="dropdown-menu"><li><a href="#" class="dropdown-item">Education & Experience</a></li></ul>
+                        </li>
+                        <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Skills</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </header>
-        <main>
-        <div class="px-4 pt-5 my-5">
-            <h1>Gilyn Maure</h1>
-            <p class="lead">Frontend Developer</p>
-            <p class="lead"><a class="btn bg-dark text-light" href="#">Learn more/About</a></p>
-        </div>
-        </main>
-        <footer class="mt-auto">
-            <p>&copy; <span id="year"></span> Gilyn Maure</p>
-        </footer>
-    </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container px-4 py-5 text-center">
+            <div class="row flex-row-reverse align-items-center"><div class="col-md-6 d-flex justify-content-center mb-4"><img src="./assets/images/profile-photo.JPG" class="" id="profile-photo" alt="profile photo"  loading="lazy"></div>
+                <div class="col-md-6">
+                    <h1 class="display-6 fw-bold">Hello, I'm Doean.</h1>
+                    <p class="lead">Aspiring Web Developer</p>
+                    <button type="button" class="btn btn-dark">Download Resume</button>
+                </div>
+            </div>     
+        </div>    
+    </main>
+    <footer class="footer mt-auto py-3 bg-body-tertiary text-center"><div class="container"><p>&copy; <span id="year"></span> Doean Francimae Gilyn Maure</p></div></footer>
 <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> 
 </body>
 </html>
